Add javadoc to methods of `GStringImpl`